# SteamControllerXboxEmulationApp

./: .gitignore  instructions.txt  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/example/steamcontrollertoxboxapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  uinput_wrapper.c
app/src/main/java/com/example/steamcontrollertoxboxapp/ble/: AndroidBleManager.java  BleDevice.java  BleDeviceManager.java
app/src/main/java/com/example/steamcontrollertoxboxapp/core/: ControllerMapper.java  SteamControllerDefs.java  SteamControllerParser.java  UInputConstants.java  VirtualController.java
app/src/main/java/com/example/steamcontrollertoxboxapp/nativeimpl/: UInputController.java
app/src/main/java/com/example/steamcontrollertoxboxapp/service/: EmulationService.java
app/src/main/java/com/example/steamcontrollertoxboxapp/ui/: DeviceScanAdapter.java  MainActivity.java
app/src/main/java/com/example/steamcontrollerxbox/ble/: AndroidBleManager.java
app/src/main/java/com/example/steamcontrollerxbox/core/: ControllerMapper.java  SteamControllerDefs.java  SteamControllerParser.java  UInputConstants.java  VirtualController.java
app/src/main/java/com/example/steamcontrollerxbox/nativeimpl/: UInputController.java
app/src/main/java/com/example/steamcontrollerxbox/service/: EmulationService.java
app/src/main/java/com/example/steamcontrollerxbox/ui/: DeviceScanAdapter.java  MainActivity.java
app/src/main/res/drawable/: ic_controller_notif.xml
app/src/main/res/layout/: activity_main.xml  list_item_device.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/steamcontrollertoxboxapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
